--- a/css/bio.css
+++ b/css/bio.css
@@ -370,3 +370,15 @@ opacity: 1;
     width: 200px;
 }
 }
+
+@media screen and ( max-width: 700px){
+.info-area{
+    display: block;
+}
+.card{
+    display: block;
+    text-align: center;
+    width: 90%;
+}
+
+}
